# cellular-life-simulation

./: .gitignore  README.md  pyproject.toml  tox.ini
.github/workflows/: tests.yml
src/: Ball.py  Cell.py  Entity.py  Point2.py  __main__.py  main.py
src/abstractcamera/: AbstractCamera.py  AbstractMoveableCamera.py  __init__.py
src/camera/: Camera.py  MoveableCamera.py
src/config/: Config.py
src/config/game/: GameConfig.py
src/config/gameconfig/: GameConfig.py
src/config/gameconfig/worldconfig/: WorldConfig.py
src/config/window/: WindowConfig.py
src/config/world/: WorldConfig.py
src/config/world/atoms/: AtomsConfig.py
src/config/worldconfig/: WorldConfig.py
src/creature/: Creature.py
src/creature/builder/: CreatureBuilder.py  __init__.py
src/creature/gene/: Gene.py
src/creature/genesmanager/: GenesManager.py
src/creature/spawner/: CreatureSpawner.py  __init__.py
src/engine/: Air.py  BoundingBox2.py  Cell.py  Entity.py  Joint.py  World.py  __init__.py
src/engine/physics/: CellView.py  CollisionResolver.py  JointResolver.py  JointView.py  MovementResolver.py
src/engine/quadtree/: Chunk.py  Quadtree.py
src/engine/world/: World.py
src/game/: Game.py
src/pygameimp/: Camera.py  Drawer.py
src/utils/: Dim2.py  Point2.py
src/utils/color/: Color.py
src/utils/dim2/: Dim2.py  FloatDim2.py  IntDim2.py
src/utils/movable/: Movable.py
src/utils/point2/: FloatPoint2.py  IntPoint2.py  Point2.py
src/world/: World.py
tests/: test_Atom.py  test_Ball.py  test_Cell.py  test_Entity.py  test_IntPoint2.py  test_Point2.py  test_placeholder.py
(+39 files in other folders)
