[tool.poetry]
name = "cellular-life-simulation"
version = "0.1.0"
description = ""
authors = ["Rafał Majewski <goodheropl@gmail.com>"]
license = "CC0-1.0"

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
mypy = "^0.942"
tox = "^3.25.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
